Fix: Possible column misalignment when scrolling is enabled
- This is caused due to different content in the displayed header and
  the size forcing header in the body scrolling table. The browsers can
  lay the two tables out differently even although the widths applied
  are identical, due to the different content.

- The fix is to keep the content in the scroll body header, but hide it
  by wrapping in a div which has height 0 and overflow hidden

- See thread 19311 for more information

--- a/css/jquery.dataTables.scss
+++ b/css/jquery.dataTables.scss
@@ -407,6 +407,16 @@ table.dataTable td {
 		div.dataTables_scrollBody {
 			*margin-top: -1px;
 			-webkit-overflow-scrolling: touch;
+
+			th > div.dataTables_sizing,
+			td > div.dataTables_sizing {
+				// Hide the element used to wrap the content in the header for
+				// the body scrolling table
+				height: 0;
+				overflow: hidden;
+				margin: 0 !important;
+				padding: 0 !important;
+			}
 		}
 	}
 
